<resources>
    <string name="app_name">Projects</string>
    <string name="by_creativeliar">By CreativeLair</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="projects">Projects</string>
    <string name="login">Login</string>
    <string name="name_holder">Name_Holder</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="requirement">Enter Requirement Here</string>
</resources>
